[package]
name = "vector_tile_services"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
env_logger = "0.11"
log = "0.4"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls", "macros"] }
dotenv = "0.15"
serde = "1.0.228"
serde_json = "1.0"
once_cell = "1.19"
tokio = { version = "1", features = ["sync"] }
moka = { version = "0.12", features = ["future"] }
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.15"